--- a/views/hotels.pug
+++ b/views/hotels.pug
@@ -4,12 +4,17 @@ block content
   h1= title
   - let hotels = results;
   div(class="container-fluid mt-3")
-  div(class="row")
+  div(class="row m-1")
     each hotel,index in hotels
-        div(class="col-sm-2"   onclick=`buy(${index})`) #{hotel.roomType} - #{hotel.price} - #{hotel.location}
+      - let destination = `dispatch(\"/hotels/update?id=${hotel._id}\")`
+        div(class="col-md-6" class="m-1"  onclick=`buy(${index})`) #{hotel.roomType} - #{hotel.price} - #{hotel.location}
+        button.btn(class="btn-danger m-1", onclick= destination) Update
   script.
      
       function buy(itemNo)
       {
         alert(`You purchased Item ${itemNo+1}`)
+      }
+      function dispatch(path){
+        window.location.href=path 
       }
