--- a/views/hoteldelete.pug
+++ b/views/hoteldelete.pug
@@ -26,8 +26,8 @@ block content
         div(class='costumeAttr mr-3') Hotel Location is:
         div #{location}
 
-    button(class="btn btn-danger" onclick="deleteOnid()") Delete
-    button(class="btn btn-secondary" onclick="cancel()") Cancel
+    button(class="btn btn-danger m-2" onclick="deleteOnid()") Delete
+    button(class="btn btn-secondary m-2" onclick="cancel()") Cancel
 
   script.
     function cancel() {
