--- a/views/hotels.pug
+++ b/views/hotels.pug
@@ -1,14 +1,20 @@
 extends layout
 
 block content
+  - let create = `dispatch(\"/hotels/create\")`
+  button.btn(class="btn-danger m1-1", onclick= create) Create
   h1= title
   - let hotels = results;
   div(class="container-fluid mt-3")
   div(class="row m-1")
     each hotel,index in hotels
       - let destination = `dispatch(\"/hotels/update?id=${hotel._id}\")`
+      - let detail = `dispatch(\"/Hotels/detail?id=${hotel._id}\")`
+      - let del = `dispatch(\"/Hotels/delete?id=${hotel._id}\")`
         div(class="col-md-6" class="m-1"  onclick=`buy(${index})`) #{hotel.roomType} - #{hotel.price} - #{hotel.location}
         button.btn(class="btn-danger m-1", onclick= destination) Update
+        button.btn(class="btn-danger ml-1", onclick= detail) View
+        button.btn(class="btn-danger ml-1", onclick= del) Delete
   script.
      
       function buy(itemNo)
